--- a/dt01_data-trans-joins-exercises.Rmd
+++ b/dt01_data-trans-joins-exercises.Rmd
@@ -20,7 +20,8 @@ library(skimr)
 # create data folder
 knitr::opts_chunk$set(warning = FALSE, 
                       message = FALSE,
-                      tidy = FALSE)
+                      tidy = FALSE, 
+                      fig.path = "img/")
 ```
 
 # Objectives 
