--- a/gg01_data-viz-as-comm.Rmd
+++ b/gg01_data-viz-as-comm.Rmd
@@ -432,11 +432,13 @@ TidyApple %>%
 
 # Visualizing Trends 
 
-Now we've seen the distribution of `dir_request`, and how it varies across `trans_type`. Next we'll look at how the relationship between these two variables varies over `date`.
+We've seen the distribution of `dir_request`, and how it varies across `trans_type`. 
+
+Now we'll look at how the relationship between these two variables varies over in a subset of US cities and across a specific `date` range.
 
 ## Focus on US Cities {.tabset}
 
-Let's narrow the data down a bit. We'll start by filtering to only US cities.
+We'll start by narrowing down the data by filtering to only US cities.
 
 ### exercise
 
@@ -452,7 +454,7 @@ TidyApple %>%
 
 ### solution
 
-Here we reduce the dataset to only cities in the US, and we check the `date` range with `skimr::skim()`
+Here we reduce the dataset to only cities in the US, and we check the `date` range with `skimr::skim()`. If this looks OK, we assign to `USCities`
 
 ```{r us-cities-skim-sol}
 TidyApple %>% 
@@ -460,24 +462,47 @@ TidyApple %>%
               country == "United States") %>% 
                 # use skimr to check date
                 skimr::skim(date)
+
+TidyApple %>% 
+  filter(geo_type == "city" &
+         country == "United States") -> USCities
 ```
 
-## Updating Labels  
+## Updating Labels {.tabset}
 
-We can see this date range is from `r min(TidyApple$date)` to `r max(TidyApple$date)`. 
+We can see this date range is from `r min(USCities$date)` to `r max(USCities$date)`. 
 
-We want to specify this in our labels object (`lab_line01`), so we will use the `paste0()` function to have the labels update every time the data changes.
+### exercise 
 
-```{r lab_line01}
-lab_line01 <- labs(x = "Date",
-                 y = "Direction Requests",
-                 title = "Direction Requests Over Time (US Cities Only)",
-                 subtitle = paste0(min(TidyApple$date), " through ", max(TidyApple$date)),
-                 caption = "source: https://covid19.apple.com/mobility", 
-                 color = "Transit Type")
+Use `paste0()` to combine the first and last `date` in the filtered `USCities` dataset.
+
+```{r paste0-dates-ex, eval=FALSE}
+paste0(min(______________$____), 
+       " through ", 
+       max(______________$____))
 ```
 
-## Line Graphs {.tabset}
+### solution 
+
+```{r paste0-dates-sol}
+paste0(min(USCities$date), 
+       " through ", 
+       max(USCities$date))
+```
+
+
+We want to specify this in our labels object (`lab_line_update`), so we will use the `paste0()` function to have the labels update every time the data changes.
+
+```{r lab_line_update}
+labs(x = "Date",
+     y = "Direction Requests",
+     title = "Direction Requests Over Time (US Cities Only)",
+     subtitle = paste0(min(USCities$date), 
+                       " through ", 
+                       max(USCities$date)),
+     caption = "source: https://covid19.apple.com/mobility", 
+     color = "Transit Type") -> lab_line_update
+```
 
 We're going to create a line graph of direction requests over time, colored by color.
 
@@ -489,12 +514,10 @@ Pass the filtered data to the `geom_line()`, mapping the following variables to 
 - `dir_request` to `y`   
 - `trans_type` to both `group` and `color`  
 
-Include `lab_line01` to see how the new labels look.
+Include `lab_line_update` to see how the new labels look!
 
 ```{r geom-line-us-cities-ex, eval=FALSE}
-TidyApple %>% 
-  filter(geo_type == "city" &
-              country == "United States") %>% 
+USCities %>% 
   ggplot() +
   geom_line(aes(x = __________, y = __________, 
              group = __________, color = __________)) + 
@@ -503,28 +526,28 @@ TidyApple %>%
 
 ### solution
 
-Let's see what happens when we use `lab_line01`. 
+Let's see what happens when we use `lab_line_update`. 
 
 ```{r geom-line-us-cities-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
-TidyApple %>% 
-  filter(geo_type == "city" &
-              country == "United States") %>% 
+USCities %>% 
   ggplot() +
   geom_line(aes(x = date, y = dir_request, 
              group = trans_type, color = trans_type)) + 
-  lab_line01
+  lab_line_update
 ```
 
-The lines in this graph are overlapping each other, so we will adjust the `size` to `0.20`.
+The dates updated to the min and max `date` in `USCities`. 
+
+## Adjusting Line Size {.tabset}
+
+These lines in this graph are overlapping each other, so we will adjust the `size` to `0.20`.
 
 ### exercise 
 
 Change the size of the `geom_line()` (outside of `aes()`).
 
 ```{r us-cities-line-alpha-ex, eval=FALSE}
-TidyApple %>% 
-  filter(geo_type == "city" &
-              country == "United States") %>% 
+USCities %>% 
   ggplot() +
   geom_line(aes(x = date, y = dir_request, 
              group = trans_type, color = trans_type), 
@@ -534,26 +557,30 @@ TidyApple %>%
 
 ### solution
 
-Now the trends are easier to see.
+See below:
 
 ```{r us-cities-line-alpha-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
-TidyApple %>% 
-  filter(geo_type == "city" &
-              country == "United States") %>% 
+USCities %>% 
   ggplot() +
   geom_line(aes(x = date, y = dir_request, 
              group = trans_type, color = trans_type), 
             size = 0.20) + 
-  lab_line01
+  lab_line_update
 ```
 
-## Narrow Date Range {.tabset}
+Now the trends are easier to see.
 
-We are going to only look at the trends between February and August of 2020. We will create two new objects (`start_date` and `end_date`), which we can use to embed the dates into the `filter()` function (and anywhere else we need to use this date range). This method is probably better than passing the dates as a character (i.e. in quotes), because we would only have to change it in one place. However, the option above makes better use of R functional programming syntax.
+## Setting Date Range {.tabset}
+
+We are going to only look at the trends between February and August of 2020, but we're going to use an alternative method to `filter` the data and create the labels. 
+
+We will create two new objects (`start_date` and `end_date`), which we can use to narrow the dates using the `filter()` function (and anywhere else we need to use this date range). 
+
+This method is better than passing the dates as a character (i.e. in quotes), because we would only have to change it in one place. However, the option above makes better use of R functional programming syntax.
 
 ### exercise
 
-Pass the `start_date` and `end_date` to the `as_date()` functions, and take a look at the `date` variable with `skimr::skim()`
+Pass the `start_date` and `end_date` to the `as_date()` functions, and take a look at the `date` variable with `skimr::skim()` and if it looks correct, assign it to `USCitiesFebJul`
 
 ```{r start_date-end_date-skimr-ex, eval=FALSE}
 # create date objects
@@ -581,65 +608,45 @@ TidyApple %>%
   filter(geo_type == "city" &
               country == "United States", 
                 date >= as_date(start_date) & 
-                  date <= as_date(end_date)) %>% 
-                  skimr::skim(date)
+                  date <= as_date(end_date)) -> USCitiesFebJul
+
+USCitiesFebJul %>% 
+  skimr::skim(date)
 ```
 
 ### exercise 
 
-Create the new labels (`lab_line_02`) with the `paste0()` function by passing both `start_date` and `end_date`. Assign the plot to `gg_us_cities`
+Create the new labels (`lab_line_paste`) with the `paste0()` function by passing both `start_date` and `end_date`. 
 
-```{r lab_line_02-ex, eval=FALSE}
-lab_line_02 <- labs(x = "Date",
+```{r create-lab_line_paste-ex, eval=FALSE}
+lab_line_paste <- labs(x = "Date",
                  y = "Direction Requests",
                  title = "Direction Requests Over Time (US Cities Only)",
                  subtitle = paste0(___________, " through ", ___________),
                  caption = "source: https://covid19.apple.com/mobility", 
                  color = "Transit Type")
-
-TidyApple %>% 
-  filter(geo_type == "city" &
-              country == "United States", 
-                date >= as_date(start_date) & 
-                  date <= as_date(end_date)) %>%
-  ggplot() +
-  # make these slightly larger...
-  geom_line(aes(x = date, y = dir_request, 
-             group = trans_type, color = trans_type), size = 0.30) + 
-  lab_line_02 -> ___________
 ```
 
 ### solution
 
-See below:
-
-```{r lab_line_02-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
-lab_line_02 <- labs(x = "Date",
+```{r create-lab_line_paste-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
+lab_line_paste <- labs(x = "Date",
                  y = "Direction Requests",
                  title = "Direction Requests Over Time (US Cities Only)",
                  subtitle = paste0(start_date, " through ", end_date),
                  caption = "source: https://covid19.apple.com/mobility", 
                  color = "Transit Type")
 
-TidyApple %>% 
-  filter(geo_type == "city" &
-              country == "United States", 
-                date >= as_date(start_date) & 
-                  date <= as_date(end_date)) %>%
+USCitiesFebJul %>% 
   ggplot() +
-  
   geom_line(aes(x = date, y = dir_request, 
              group = trans_type, color = trans_type), 
             # make these slightly larger...
             size = 0.30) + 
-  lab_line_02 -> gg_us_cities
+  lab_line_paste
 ```
 
-```{r show-gg_us_cities, echo=FALSE, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
-gg_us_cities
-```
-
-# Labeling Data 
+# Adding Text to Graphs 
 
 We can see there is a gap in the direct request data (this is [documented in the data source](https://covid19.apple.com/mobility)). 
 
@@ -653,7 +660,7 @@ In the previous lesson, we introduced the `ggrepel` package to show the points o
 knitr::include_graphics(path = "img/aes-sol-11-1.png")
 ```
 
-We're going to use labels to annotate and highlight US cities between March and July of 2020.
+We're going to use labels to annotate and highlight US cities between March and June of 2020.
 
 ## Annotations {.tabset}
 
@@ -661,16 +668,16 @@ Being able to manually add text and annotations as layers to your graph makes it
 
 ### exercise 
 
-Build a dataset from `TidyApple` that only has US cities, and ranges from March 1, 2020 to July 1, 2020. 
+Build a dataset from `TidyApple` that only has US cities, and ranges from March 1, 2020 to June 30, 2020. 
 
-```{r USCitiesMarJul-ex, eval=FALSE}
-USCitiesMarJul <-  TidyApple %>% 
+```{r USCitiesMarJun-ex, eval=FALSE}
+USCitiesMarJun <-  TidyApple %>% 
   filter(geo_type == ___________ &
               country == ___________, 
                 date >= as_date(___________) & 
                   date <= as_date(___________)) 
 
-USCitiesMarJul %>% 
+USCitiesMarJun %>% 
                   skimr::skim()
 ```
 
@@ -678,14 +685,45 @@ USCitiesMarJul %>%
 
 See below:
 
-```{r USCitiesMarJul-sol}
-USCitiesMarJul <-  TidyApple %>% 
+```{r USCitiesMarJun-sol}
+USCitiesMarJun <-  TidyApple %>% 
   filter(geo_type == "city" &
               country == "United States", 
                 date >= as_date("2020-03-01") & 
                   date <= as_date("2020-07-01")) 
 
-USCitiesMarJul %>% skimr::skim()
+USCitiesMarJun %>% skimr::skim()
+```
+
+### exercise 
+
+We're going to build labels using the `paste0()` function. Fill in the appropriate dataset for the `min()` and `max()` date. 
+
+```{r create-lab_annotate-ex, eval=FALSE}
+lab_annotate <- labs(x = "Date",
+                 y = "Direction Requests",
+                 title = "Direction Requests Over Time (US Cities Only)",
+                 subtitle = paste0(min(______________$date), 
+                                   " through ", 
+                                   max(______________$date)),
+                 caption = "source: https://covid19.apple.com/mobility", 
+                 color = "Transit Type")
+```
+
+
+### solution
+
+See below:
+
+```{r create-lab_annotatesol}
+lab_annotate <- labs(x = "Date",
+                 y = "Direction Requests",
+                 title = "Direction Requests Over Time (US Cities Only)",
+                 subtitle = paste0(min(USCitiesMarJun$date), 
+                                   " through ", 
+                                   max(USCitiesMarJun$date)),
+                 caption = "source: https://covid19.apple.com/mobility", 
+                 color = "Transit Type")
 ```
 
 ### exercise 
@@ -694,8 +732,8 @@ The previous code for the graph has been added. We're going to add the following
 
 Inside `coord_cartesian()`:
 
-- map `min(USCitiesMarJul$date)` and `max(USCitiesMarJul$date)` inside `c()` to `xlim`   
-- map `min(USCitiesMarJul$dir_request, na.rm = TRUE)` and `max(USCitiesMarJul$dir_request, na.rm = TRUE)` inside `c()` to `ylim`
+- map `min(USCitiesMarJun$date)` and `max(USCitiesMarJun$date)` inside `c()` to `xlim`   
+- map `min(USCitiesMarJun$dir_request, na.rm = TRUE)` and `max(USCitiesMarJun$dir_request, na.rm = TRUE)` inside `c()` to `ylim`
 
 Inside the `# horizontal` `annotate()`:
 
@@ -726,7 +764,7 @@ Inside the `# text` `annotate()`:
 - map `"Data not available"` to `label`
 
 ```{r coord_cartesian-annotate-text-ex, eval=FALSE}
-USCitiesMarJul %>% 
+USCitiesMarJun %>% 
     ggplot() +
     geom_line(aes(x = date, y = dir_request, 
              group = trans_type, color = trans_type), 
@@ -759,25 +797,25 @@ USCitiesMarJul %>%
                y = 280, 
                label = "Data not available") +
 
-    lab_line_02
+    lab_annotate
 ```
 
 ### solution
 
 ```{r coord_cartesian-annotate-text-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
 # plot
-USCitiesMarJul %>% 
+USCitiesMarJun %>% 
     ggplot() +
     geom_line(aes(x = date, y = dir_request, 
              group = trans_type, color = trans_type), 
              # make these slightly larger...
              size = 0.30) + 
    # coordinate system
-   coord_cartesian(xlim = c(min(USCitiesMarJul$date), 
-                            max(USCitiesMarJul$date)), 
+   coord_cartesian(xlim = c(min(USCitiesMarJun$date), 
+                            max(USCitiesMarJun$date)), 
                    
-                   ylim = c(min(USCitiesMarJul$dir_request, na.rm = TRUE), 
-                            max(USCitiesMarJul$dir_request, na.rm = TRUE))) +
+                   ylim = c(min(USCitiesMarJun$dir_request, na.rm = TRUE), 
+                            max(USCitiesMarJun$dir_request, na.rm = TRUE))) +
    # horizontal
    annotate(geom = "segment", 
             size = 0.5, 
@@ -803,7 +841,7 @@ USCitiesMarJul %>%
                y = 280, 
                label = "Data not available") +
 
-    lab_line_02
+    lab_annotate
 ```
 
 ### exercise 
@@ -812,18 +850,18 @@ Add a second and third vertical `segment` to create a fence or bracket for the d
 
 ```{r coord_cartesian-annotate-comp-ex, eval=FALSE}
 # plot
-USCitiesMarJul %>% 
+USCitiesMarJun %>% 
     ggplot() +
     geom_line(aes(x = date, y = dir_request, 
              group = trans_type, color = trans_type), 
              # make these slightly larger...
              size = 0.30) + 
    # coordinate system
-   coord_cartesian(xlim = c(min(USCitiesMarJul$date), 
-                            max(USCitiesMarJul$date)), 
+   coord_cartesian(xlim = c(min(USCitiesMarJun$date), 
+                            max(USCitiesMarJun$date)), 
                    
-                   ylim = c(min(USCitiesMarJul$dir_request, na.rm = TRUE), 
-                            max(USCitiesMarJul$dir_request, na.rm = TRUE))) +
+                   ylim = c(min(USCitiesMarJun$dir_request, na.rm = TRUE), 
+                            max(USCitiesMarJun$dir_request, na.rm = TRUE))) +
    # horizontal
    annotate(geom = "segment", 
             size = 0.5, 
@@ -864,7 +902,7 @@ USCitiesMarJul %>%
             y = _____________________________, 
             yend = _____________________________) + 
   
-   lab_line_02 
+   lab_annotate 
 ```
 
 
@@ -874,18 +912,18 @@ See below:
 
 ```{r coord_cartesian-annotate-comp-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
 # plot
-USCitiesMarJul %>% 
+USCitiesMarJun %>% 
     ggplot() +
     geom_line(aes(x = date, y = dir_request, 
              group = trans_type, color = trans_type), 
              # make these slightly larger...
              size = 0.30) + 
    # coordinate system
-   coord_cartesian(xlim = c(min(USCitiesMarJul$date), 
-                            max(USCitiesMarJul$date)), 
+   coord_cartesian(xlim = c(min(USCitiesMarJun$date), 
+                            max(USCitiesMarJun$date)), 
                    
-                   ylim = c(min(USCitiesMarJul$dir_request, na.rm = TRUE), 
-                            max(USCitiesMarJul$dir_request, na.rm = TRUE))) +
+                   ylim = c(min(USCitiesMarJun$dir_request, na.rm = TRUE), 
+                            max(USCitiesMarJun$dir_request, na.rm = TRUE))) +
    # horizontal
    annotate(geom = "segment", 
             size = 0.5, 
@@ -924,9 +962,7 @@ USCitiesMarJul %>%
             xend = lubridate::as_date("2020-05-13"), 
             y = 100, yend = 90) + 
   
-   lab_line_02 
-  
-
+   lab_annotate 
 ```
 
 
@@ -934,7 +970,7 @@ USCitiesMarJul %>%
 
 **Max Driving Requests**
 
-The code below creates a subset of the data (`TopUSCities`). Use this to add the labels.
+The code below creates a subset of the data (`TopUSCities`). We will use this to add the labels.
 
 ```{r TopUSCities}
 TopUSCities <- TidyApple %>% 
@@ -952,7 +988,8 @@ Create `MaxUSCitiesDriving` by filtering `trans_type`, grouping on the `region` 
 TopUSCities %>% 
   filter(trans_type == __________) %>% 
   group_by(__________) %>% 
-  slice_max(__________) -> MaxUSCitiesDriving
+  slice_max(dir_request) %>% 
+  ungroup() -> MaxUSCitiesDriving
 MaxUSCitiesDriving
 ```
 
@@ -964,7 +1001,8 @@ See below:
 TopUSCities %>% 
   filter(trans_type == "driving") %>% 
   group_by(region) %>% 
-  slice_max(dir_request) -> MaxUSCitiesDriving
+  slice_max(dir_request) %>% 
+  ungroup() -> MaxUSCitiesDriving
 MaxUSCitiesDriving
 ```
 
@@ -981,7 +1019,9 @@ lab_line_max_drivers <- labs(
                  x = "Date",
                  y = "Direction Requests",
                  title = "_________________________________",
-                 subtitle = "_________________________________",
+                 subtitle = paste0(min(___________$date), 
+                                   " through ", 
+                                   max(___________$date)),
                  caption = "source: https://covid19.apple.com/mobility", 
                  color = "Transit Type")
 ```
@@ -996,7 +1036,9 @@ lab_line_max_drivers <- labs(
                  x = "Date",
                  y = "Direction Requests",
                  title = "Peak Driving Direction Requests in Largest US Cities",
-                 subtitle = "Max Driving Direction Requests & Date",
+                 subtitle = paste0(min(TopUSCities$date), 
+                                   " through ", 
+                                   max(TopUSCities$date)),
                  caption = "source: https://covid19.apple.com/mobility", 
                  color = "Transit Type")
 ```
@@ -1009,7 +1051,8 @@ Create `max_driving_labels` using `paste0()` with `region` and `date`.
 MaxUSCitiesDriving %>% 
   mutate(
     max_driving_labels = paste0(______, ", ", ______)) -> MaxUSCitiesDriving
-MaxUSCitiesDriving
+MaxUSCitiesDriving %>% 
+  select(max_driving_labels)
 ```
 
 ### solution
@@ -1019,7 +1062,8 @@ See below:
 ```{r max_driving_labels-sol-01}
 MaxUSCitiesDriving %>% 
   mutate(max_driving_labels = paste0(region, ", ", date)) -> MaxUSCitiesDriving
-MaxUSCitiesDriving
+MaxUSCitiesDriving %>% 
+  select(max_driving_labels)
 ```
 
 ### exercise 
@@ -1092,7 +1136,8 @@ We are going to repeat the process above, but use the minimum value for walking 
 TopUSCities %>% 
   filter(________ == ________) %>% 
   group_by(________) %>% 
-  slice_min(________) -> ________
+  slice_min(dir_request) %>% 
+  ungroup() -> MinUSCitiesWalking
 MinUSCitiesWalking
 ```
 
@@ -1104,21 +1149,23 @@ See below:
 TopUSCities %>% 
   filter(trans_type == "walking") %>% 
   group_by(region) %>% 
-  slice_min(dir_request) -> MinUSCitiesWalking
+  slice_min(dir_request) %>% 
+  ungroup() -> MinUSCitiesWalking
 MinUSCitiesWalking
 ```
 
 ### exercise 
 
 - assign `"Lowest Walking Direction Requests in Largest US Cities"` to `title`  
-- assign `"Min Walking Direction Requests & Date"` to `caption`  
 
 ```{r lab_line_min_walking-ex, eval=FALSE}
 lab_line_min_walking <- labs(
                x = "Date",
                y = "Direction Requests",
                title = "__________________________________________",
-               subtitle = "__________________________________________",
+               subtitle = paste0(min(___________$date), 
+                                   " through ", 
+                                 max(___________$date)),
                caption = "source: https://covid19.apple.com/mobility", 
                color = "Transit Type")
 ```
@@ -1132,7 +1179,9 @@ lab_line_min_walking <- labs(
                x = "Date",
                y = "Direction Requests",
                title = "Lowest Walking Direction Requests in Largest US Cities",
-               subtitle = "Min Walking Direction Requests & Date",
+               subtitle = paste0(min(TopUSCities$date), 
+                                   " through ", 
+                                 max(TopUSCities$date)),
                caption = "source: https://covid19.apple.com/mobility", 
                color = "Transit Type")
 ```
@@ -1219,7 +1268,7 @@ We're going to focus on the top 8 cites according to their [population](https://
 
 **Top Cities**
 
-We're going to introduce another `filter`ing method in this section to create the `TopCities` dataset.
+We're going to introduce another `filter`ing method in this section to create the `TopUSCities` dataset.
 
 ### exercise
 
@@ -1231,10 +1280,10 @@ focus_on <- c("New York City", "Los Angeles",
                        "Phoenix", "Philadelphia", 
                        "San Antonio", "San Diego")
 
-TopCities <- TidyApple %>% 
+TopUSCities <- TidyApple %>% 
   filter(region %in% _____________)
 
-TopCities %>% glimpse(60)
+TopUSCities %>% glimpse(60)
 ```
 
 ### solution
@@ -1243,14 +1292,14 @@ See below:
 
 ```{r focus_on-sol}
 focus_on <- c("New York City", "Los Angeles", 
-                       "Chicago", "Houston", 
-                       "Phoenix", "Philadelphia", 
-                       "San Antonio", "San Diego")
+              "Chicago", "Houston", 
+              "Phoenix", "Philadelphia", 
+              "San Antonio", "San Diego")
 
-TopCities <- TidyApple %>% 
+TopUSCities <- TidyApple %>% 
   filter(region %in% focus_on)
 
-TopCities %>% glimpse(60)
+TopUSCities %>% glimpse(60)
 ```
 
 ### exercise
@@ -1288,16 +1337,16 @@ We're going to set the global graph aesthetics inside `ggplot(aes())` using our 
 
 **Global `aes()`**
 
-- Map `trans_type` to `area` and `color`.
+- Map `trans_type` to `group` and `color`
 
 - Also add a `geom_line()` layer with the `size` set to `0.1` (not inside the `aes()`!)
 
-```{r TopCities-geom_line-ex, eval=FALSE}
-TopCities %>% 
+```{r TopUSCities-geom_line-ex, eval=FALSE}
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
-             group = trans_type, 
-             color = trans_type)) + 
-  geom_line(size = 0.1) + 
+             _____ = __________, 
+             _____ = __________)) + 
+  ____________(_____ = ___) + 
   lab_top_cities
 ```
 
@@ -1305,8 +1354,8 @@ TopCities %>%
 
 See below:
 
-```{r TopCities-geom_line-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
-TopCities %>% 
+```{r TopUSCities-geom_line-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
              group = trans_type, 
              color = trans_type)) + 
@@ -1327,12 +1376,13 @@ The `geom_hline()` function takes `yintercept`, `size`, and `color` arguments.
 - make the `color` of this line `"gray20"` 
  
 ```{r geom_hline-ex, eval=FALSE}
-TopCities %>% 
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
              group = trans_type, 
-             color = trans_type)) + 
+             color = trans_type)) +
   geom_line(size = 0.1) + 
-  geom_hline(yintercept = __, size = ___, color = "") +
+  # add reference line
+  geom_hline(yintercept = ___, size = ___, color = _______) +
   lab_top_cities
 ```
 
@@ -1341,8 +1391,7 @@ TopCities %>%
 See below:
 
 ```{r geom_hline-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
-
-TopCities %>% 
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
              group = trans_type, 
              color = trans_type)) + 
@@ -1366,7 +1415,7 @@ Now that we have a graph we can use to compare the `8` cities, we will use `face
 Fill in the `facet_wrap()` (note the use of the `~`) function with `region` and set the `ncol` to `2`.
 
 ```{r facet_wrap-ex, eval=FALSE}
-TopCities %>% 
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
              group = trans_type, 
              color = trans_type)) + 
@@ -1381,7 +1430,7 @@ TopCities %>%
 See below:
 
 ```{r facet_wrap-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
-TopCities %>% 
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
              group = trans_type, 
              color = trans_type)) + 
@@ -1390,6 +1439,38 @@ TopCities %>%
   facet_wrap(~ region,  ncol = 2) + 
   lab_top_cities
 ```
+
+### exercise
+
+Now map *both* `region` and `trans_type` to `facet_wrap()` and set the `ncol` to `6`.
+
+```{r facet_wrap-2-ex, eval=FALSE}
+TopUSCities %>% 
+  ggplot(aes(x = date, y = dir_request, 
+             group = region, 
+             color = trans_type)) + 
+  geom_line(size = 0.1) + 
+  geom_hline(yintercept = 100, size = 0.2, color = "gray20") +
+  facet_wrap(_______ ~ _______, ncol = _) + 
+  lab_top_cities
+```
+
+
+### solution
+
+See below:
+
+```{r facet_wrap-2-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
+TopUSCities %>% 
+  ggplot(aes(x = date, y = dir_request, 
+             group = region, 
+             color = trans_type)) + 
+  geom_line(size = 0.1) + 
+  geom_hline(yintercept = 100, size = 0.2, color = "gray20") +
+  facet_wrap(region ~ trans_type, ncol = 6) + 
+  lab_top_cities
+```
+
 
 ## Complete Themes  {.tabset}
 
@@ -1410,13 +1491,13 @@ theme_minimal(
 We'll use the `theme_minimal()` function to reduce the number of `elements` on our graph (don't add any arguments).
 
 ```{r theme_minimal-ex, eval=FALSE}
-TopCities %>% 
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
-             group = trans_type, 
+             group = region, 
              color = trans_type)) + 
   geom_line(size = 0.1) + 
   geom_hline(yintercept = 100, size = 0.2, color = "gray20") +
-  facet_wrap(~ region,  ncol = 2) + 
+  facet_wrap(region ~ trans_type, ncol = 6) + 
   ______________() +
   lab_top_cities 
 ```
@@ -1426,13 +1507,13 @@ TopCities %>%
 See below:
 
 ```{r theme_minimal-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
-TopCities %>% 
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
-             group = trans_type, 
+             group = region, 
              color = trans_type)) + 
   geom_line(size = 0.1) + 
   geom_hline(yintercept = 100, size = 0.2, color = "gray20") +
-  facet_wrap(~ region,  ncol = 2) + 
+  facet_wrap(region ~ trans_type, ncol = 6) + 
   theme_minimal() +
   lab_top_cities 
 ```
@@ -1447,13 +1528,13 @@ Themes (accessible with the `theme` function) give up the ability to customize v
 We will start by moving the `legend.position` to `"top"` so it's not crowding the `x` axis on our graph. 
 
 ```{r theme-ex, eval=FALSE}
-TopCities %>% 
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
-             group = trans_type, 
+             group = region, 
              color = trans_type)) + 
   geom_line(size = 0.1) + 
   geom_hline(yintercept = 100, size = 0.2, color = "gray20") +
-  facet_wrap(~ region,  ncol = 2) + 
+  facet_wrap(region ~ trans_type, ncol = 6) + 
   theme_minimal() + 
   theme(___________ = _____) +
   lab_top_cities 
@@ -1464,13 +1545,13 @@ TopCities %>%
 See below:
 
 ```{r theme-sol, fig.height=8, fig.width=10, out.height='100%', out.width='100%', message=FALSE, warning=FALSE}
-TopCities %>% 
+TopUSCities %>% 
   ggplot(aes(x = date, y = dir_request, 
-             group = trans_type, 
+             group = region, 
              color = trans_type)) + 
   geom_line(size = 0.1) + 
   geom_hline(yintercept = 100, size = 0.2, color = "gray20") +
-  facet_wrap(~ region,  ncol = 2) + 
+  facet_wrap(region ~ trans_type, ncol = 6) + 
   theme_minimal() + 
   theme(legend.position = "top") +
   lab_top_cities 
@@ -1736,15 +1817,14 @@ Assign the following to the labels:
 
 - set `"US Trends in Mobility Data for Walking (Adjusted)"` to `title`  
 
-- set `"Original data uses 100 as baseline for usage at 2020-01-13"` to `subtitle`  
-
 - set `"https://covid19.apple.com/mobility"` to `caption`
 
 ```{r , lab_facet_geo-ex, eval=FALSE}
 lab_facet_geo <- labs(x = "Date", 
                       y = "Direction Requests (Walking)", 
        title = ____________________________________________, 
-       subtitle = ____________________________________________, 
+       subtitle = paste0("Original data uses 100 as baseline for usage at ", 
+                         min(USWalkingAdj$date)), 
        caption = ____________________________________________, 
        fill = "Below Baseline")
 ```
@@ -1757,7 +1837,8 @@ See below:
 lab_facet_geo <- labs(x = "Date", 
                       y = "Direction Requests (Walking)", 
        title = "US Trends in Mobility Data for Walking (Adjusted)", 
-       subtitle = "Original data uses 100 as baseline for usage at 2020-01-13", 
+       subtitle = paste0("Original data uses 100 as baseline for usage at ", 
+                         min(USWalkingAdj$date)), 
        caption = "https://covid19.apple.com/mobility",
        fill = "Below Baseline")
 ```
